--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -212,7 +212,39 @@ focus-exclude = [
 #  "100:class_g    = 'firefox'",
 #  "100:class_g    = 'Thunderbird'"
 #];
-opacity-rule = [ "100:class_g *= 'Qemu-system-x86_64'", "100:class_g *= 'Godot'", "100:class_g *= 'Virt-manager'", "100:name *= 'GraphicsEngine'", "100:name *= 'Cascadeur'", "100:name *= 'Android Studio'", "100:name *= 'Google Chrome'", "100:name *= 'OBS'", "100:name *= 'Rocket.Chat'", "100:name *= 'makehuman'", "100:name *= 'uad_gui-linux'", "100:name *= 'scrcpy'", "100:name *= 'Discord'", "100:name *= 'libreoffice-writer'", "100:name *= 'sxiv'", "100:name *= 'Tor Browser'", "100:name *= 'Blender'", "100:name *= 'Firefox'", "100:name *= 'Brave'", "100:name *= 'VLC'", "100:name *= 'mpv'", "100:name *= 'GIMP'", "100:name *= 'Unity'", "100:name *= 'deepin-camera'", "100:name *= 'inside.exe'" ];
+opacity-rule = [ 
+	"100:class_g *= 'kdeconnect.daemon'", 
+	"100:class_g *= 'guvcview'", 
+	"100:class_g *= 'Soffice'", 
+	"100:class_g *= 'libreoffice'", 
+	"100:class_g *= 'Remote-viewer'", 
+	"100:name *= 'refprop.exe'", 
+	"100:class_g *= 'Qemu-system-x86_64'", 
+	"100:class_g *= 'Godot'", 
+	"100:class_g *= 'Virt-manager'", 
+	"100:name *= 'GraphicsEngine'", 
+	"100:name *= 'Cascadeur'", 
+	"100:name *= 'Android Studio'", 
+	"100:name *= 'Google Chrome'", 
+	"100:name *= 'OBS'", 
+	"100:name *= 'Rocket.Chat'", 
+	"100:name *= 'makehuman'", 
+	"100:name *= 'uad_gui-linux'", 
+	"100:name *= 'scrcpy'", 
+	"100:name *= 'Discord'", 
+	"100:name *= 'libreoffice-writer'", 
+	"100:name *= 'sxiv'", 
+	"100:name *= 'Tor Browser'", 
+	"100:name *= 'Blender'", 
+	"100:name *= 'Firefox'", 
+	"100:name *= 'Brave'", 
+	"100:name *= 'VLC'", 
+	"100:name *= 'mpv'", 
+	"100:name *= 'GIMP'", 
+	"100:name *= 'Unity'", 
+	"100:name *= 'deepin-camera'", 
+	"100:name *= 'inside.exe'"
+];
 
 #################################
 #     Background-Blurring       #
@@ -274,7 +306,8 @@ blur-background-exclude = [
   # https://github.com/naelstrof/maim/issues/130
   "class_g = 'slop'",
   "_GTK_FRAME_EXTENTS@:c",
-  "class_g = 'conky'"
+  "class_g = 'conky'",
+  "class_g = 'kdeconnect.daemon'"
 ];
 
 
